--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "front-end-starter",
   "version": "1.1.0",
   "private": true,
-  "description": "A starter template repo for 'front-end' students",
+  "description": "A project that converts units of temperature",
   "main": "index.js",
   "scripts": {
     "start": "browser-sync start --server --files '*.html, *.css, *.js'"
@@ -11,7 +11,7 @@
     "html-css-js",
     "student"
   ],
-  "author": "Manav Misra",
+  "author": "Jason Rodgers",
   "license": "MIT",
   "devDependencies": {
     "browser-sync": "^2.26.14",
